# Finch

./: LICENSE  Project.toml  README.md  index.html  style guide.txt
benchmark/: README.md  benchmarks.jl  rawcode.jl
dev/: index.html  (+1 more)
sc23artifact338/heat3d-test/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/: .gitignore  .gitmodules  CMakeLists.txt  README.md
sc23artifact338/heat3d-test/dendrite-kt/examples/: .gitignore  README.md  regression_test.sh
sc23artifact338/heat3d-test/dendrite-kt/examples/4D/transient-heat/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/Benchmarks/CarvingOut/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/Benchmarks/Channel/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/Benchmarks/IBMComparison/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendriteBasics/Checkpointing/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendriteBasics/Geometry/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendriteBasics/IntergridTransfer/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendriteBasics/PointCloud/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendriteBasics/SubDA/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendriteBasics/SubDA2/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendriteBasics/SurfaceLoop/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendroTests/AdaptiveMesh/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendroTests/IntergridTransfer/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendroTests/MatrixTest/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendroTests/RegularDA/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendroTests/SubDA/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendroTests/SubDATest2/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/DendroTests/TreePartition/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/IMGA/Basic/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/Navier-Stokes-PSPG/: CMakeLists.txt  nspspg_regression_test.py
sc23artifact338/heat3d-test/dendrite-kt/examples/Navier-Stokes-PSPG/config/: config.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/Navier-Stokes-PSPG/include/: NSBoundaryConditions.h  NSEquation.h  NSInputData.h  NSNodeData.h  NSRefine.h  NSUtils.h
sc23artifact338/heat3d-test/dendrite-kt/examples/Navier-Stokes-Projection/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/PredatorPrey/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/SSHT/: CMakeLists.txt  README.md  ssht_regression_test.py
sc23artifact338/heat3d-test/dendrite-kt/examples/SSHT-neumann/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/SubDASSHT/: CMakeLists.txt
sc23artifact338/heat3d-test/dendrite-kt/examples/TSHT/: CMakeLists.txt  README.md  ht_regression_test.py
sc23artifact338/heat3d-test/dendrite-kt/examples/bratu/: CMakeLists.txt  README.md  bt_regression_test.py
sc23artifact338/heat3d-test/dendrite-kt/include/: DataTypes.h  DendriteUtils.h  MatVecCommon.h  NodeAndValues.h  OctToPhysical.h  TalyDendroSync.h  TalyEquation.h  TalyMat.h  TalyMesh.h  TalyVec.h  TimeInfo.h  VMSparams.h
sc23artifact338/heat3d-test/dendrite-kt/include/Basis/: Basis.h  Mat.h  MatVec.h  Vec.h
sc23artifact338/heat3d-test/dendrite-kt/include/Boundary/: BoundaryDataTypes.h  DomainBoundary.h  SubDomainBoundary.h
sc23artifact338/heat3d-test/dendrite-kt/include/Checkpoint/: Checkpointer.h
sc23artifact338/heat3d-test/dendrite-kt/include/Geometry/: Geometry.h  MSH.h  STL.h
sc23artifact338/heat3d-test/dendrite-kt/include/IMGA/: IBMSolver.h  IMGA.h  IMGADataTypes.h  IMGAInterpolate.h  IMGASolverUtils.h  IMGATraversal.h  IMGAUtils.h  IMGA_2D.h  IO.h  Marker.h  MathOperation.h  MovingIMGA.h  SixDof.h  SurfaceValues.h
sc23artifact338/heat3d-test/dendrite-kt/include/PETSc/: BoundaryConditions.h  PetscUtils.h  VecBounds.h  VecInfo.h  VecUtils.h
sc23artifact338/heat3d-test/dendrite-kt/include/PointCloud/: PointData.h
sc23artifact338/heat3d-test/dendrite-kt/include/Profiling/: GlobalProfiler.h
sc23artifact338/heat3d-test/dendrite-kt/include/SubDA/: SubDomain.h  Voxel.h
sc23artifact338/heat3d-test/dendrite-kt/include/Traversal/: Analytic.h  DomainBounds.h  Refinement.h  SurfaceLoop.h  Traversal.h
sc23artifact338/heat3d-test/dendrite-kt/scripts/: 3D.txt  4D.txt  basis.m  basisMat.m  check.m  checkMatMult.m  checkWeight.m  file_generator.py  gen_folders.py  generate_pvd.py  regression.py
sc23artifact338/heat3d-test/dendrite-kt/src/: DendriteUtils.cpp  OctToPhysical.cpp
sc23artifact338/heat3d-test/dendrite-kt/src/Boundary/: DomainBoundary.cpp  SubDomainBoundary.cpp
sc23artifact338/heat3d-test/dendrite-kt/src/Checkpoint/: Checkpointer.cpp
sc23artifact338/heat3d-test/dendrite-kt/src/Geometry/: Geometry.cpp  MSH.cpp  STL.cpp
sc23artifact338/heat3d-test/dendrite-kt/src/IMGA/: IBMSolver.cpp  IMGA.cpp  IMGA_2D.cpp  MathOperation.cpp
sc23artifact338/heat3d-test/dendrite-kt/src/PETSc/: BoundaryConditions.cpp  VecInfo.cpp
sc23artifact338/heat3d-test/dendrite-kt/src/SubDA/: SubDomain.cpp  Voxel.cpp
sc23artifact338/heat3d-test/dendrite-kt/src/Traversal/: Analytic.cpp  DomainBounds.cpp  Refinement.cpp  SurfaceLoop.cpp  Traversal.cpp
sc23artifact338/heat3d-test/include/: SBMcalc.h  heat3dBoundaryConditions.h  heat3dEquation.h  heat3dInputData.h  heat3dInputDataStructs.h  heat3dNodeData.h  heat3dRefine.h  nanoflann.hpp  util.h
sc23artifact338/heat3d-test/src/: heat3d.cpp
src/examples/Poisson3d/: CMakeLists.txt  README.txt
src/examples/Poisson3d/include/: Genfunction.h  bilinear_skel.h  linear_skel.h
src/examples/Poisson3d/src/: Bilinear.cpp  Config.cpp  Genfunction.cpp  Linear.cpp  Mesh.cpp  Output.cpp  Problem.cpp  Stepper.cpp  bilinear_skel.cpp  linear_skel.cpp  poisson3d.cpp
(+379 files in other folders)
